kubernetes/istio/istio-gateway-no-tls.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: all-hosts
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http-redirect-https
      number: 81
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
