kubernetes/istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: internal
  namespace: ${NS}
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "${HOSTNAME}"
    - "${WILDCARD_HOSTNAME}"
    port:
      name: http2-redirect-https
      number: 8081
      protocol: HTTP2
    tls:
      httpsRedirect: true
  - hosts:
    - "${HOSTNAME}"
    - "${WILDCARD_HOSTNAME}"
    port:
      name: http2
      number: 8080
      protocol: HTTP2
